--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "parametron",
   "version": "0.0.1",
   "description": "parametrize search queries",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
