--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "experimentalDecorators": true,
     "outDir": "dist",
     "declaration": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules",
