--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "parametrize search queries",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,8 +19,8 @@
   "author": "johannes-kostas goetzinger <goetzinger@mediapeers.com>",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.13",
-    "@mediafellows/chipmunk": "^1.0.0"
+    "@mediafellows/chipmunk": "^1.0.0",
+    "lodash": "^4.17.13"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.129",
