--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "license": "ISC",
   "peerDependencies": {
     "@mediafellows/chipmunk": "^2.1.0",
+    "query-string": ">=4.3.4",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@mediafellows/chipmunk": "^2.1.0",
+    "query-string": ">=4.3.4",
     "lodash": "^4.17.21",
     "@types/lodash": "^4.14.129",
-    "typescript": "^3.8.3"
+    "typescript": "^4.4.4"
   }
 }
