--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "version": "3.1.0",
+  "version": "4.0.0-alpha",
   "description": "parametrize search queries",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,14 +21,14 @@
   "license": "ISC",
   "peerDependencies": {
     "@mediafellows/chipmunk": "^2.1.0",
-    "query-string": ">=4.3.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "query-string": ">=4.3.4"
   },
   "devDependencies": {
     "@mediafellows/chipmunk": "^2.1.0",
-    "query-string": ">=4.3.4",
-    "lodash": "^4.17.21",
     "@types/lodash": "^4.14.129",
+    "lodash": "^4.17.21",
+    "query-string": ">=4.3.4",
     "typescript": "^4.4.4"
   }
 }
